--- a/Practicas480/PaginasJQuery/Checkbox.html
+++ b/Practicas480/PaginasJQuery/Checkbox.html
@@ -3,8 +3,23 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/JavaScript.js"></script>
 </head>
 <body>
-
+    <h3>Crear un formulario con cinco checkbox con cinco valores diferentes. Al pulsar el botón sumar mostraremos en una capa la suma de los valores de los elementos chequeados.</h3>
+    <form>
+        <h1 id="suma"></h1>
+        <button type="button" id="botonsumar">
+            Sumar numeros
+        </button>
+        <ul>
+            <li><input type="checkbox" name="numeros" value="9" />9</li>
+            <li><input type="checkbox" name="numeros" value="5" />5</li>
+            <li><input type="checkbox" name="numeros" value="99" />99</li>
+            <li><input type="checkbox" name="numeros" value="1" />1</li>
+            <li><input type="checkbox" name="numeros" value="95" />95</li>
+        </ul>
+    </form>
 </body>
 </html>
