--- a/Practicas480/PaginasJavaScript/08ValidarCodigoEAN.html
+++ b/Practicas480/PaginasJavaScript/08ValidarCodigoEAN.html
@@ -4,14 +4,15 @@
     <title></title>
 	<meta charset="utf-8" />
     <script src="../js/JavaScript.js"></script>
+    <link href="../Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <h3>Si el numero es impar se multiplica por 3 y se suma 1</h3>
-    <form>
+    <form class="form-control">
         <label>Numero: </label>
         <input type="number" id="caja" />
         <br />
-        <button type="button" onclick="validarEAN()">Valida</button>
+        <button type="button" class="btn-success" onclick="validarEAN()">Valida</button>
     </form>
     <h4 id="resultado"></h4>
 </body>
