--- a/Practicas480/PaginasJavaScript/09ValidarEmail.html
+++ b/Practicas480/PaginasJavaScript/09ValidarEmail.html
@@ -6,12 +6,14 @@
     <script src="../js/JavaScript.js"></script>
 </head>
 <body>
+        <ul>
+            <li>QUE EXISTA @</li>
+            <li>@ NI AL PRINCIPIO NI FINAL</li>
+            <li>NO HAYA MAS DE UNA @</li>
+            <li>QUE EXISTA UN PUNTO DESPUES DE @</li>
+            <li>DOMINIO DE 2 A 4 CARACTERES</li>
+        </ul>
     <form>
-        <p> QUE EXISTA @
-        @ NI AL PRINCIPIO NI FINAL
-        NO HAYA MAS DE UNA @
-        QUE EXISTA UN PUNTO DESPUES DE @
-        DOMINIO DE 2 A 4 CARACTERES  </p>
         <label>Introduzca un email: </label>
         <input type="text" id="txtemail" />
         <button type="button" onclick="validarEmail()">
