--- a/Practicas480/PaginasJavaScript/10AnalizarCadenaNumeros.html
+++ b/Practicas480/PaginasJavaScript/10AnalizarCadenaNumeros.html
@@ -3,6 +3,7 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <script src="../js/JavaScript.js"></script>
 </head>
 <body>
     <h2>Analizar texto con números</h2>
