--- a/Practicas480/PaginasJavaScript/AsociarEventosDinamicamente.html
+++ b/Practicas480/PaginasJavaScript/AsociarEventosDinamicamente.html
@@ -3,8 +3,14 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <script src="../js/JavaScript.js"></script>
 </head>
 <body>
-
-</body>
+    <h1>Asociar eventos dinámicamente</h1>
+    <h3 id="datos">iiiiiiiii</h3>
+    <hr />
+    <button type="button" id="boton1" onclick="enlazarEvento()">BOTON 1</button>
+    <button type="button" id="boton2">BOTON 2</button>
+    <h3 id="titulo">Pulsame para enlazar EVENTOS</h3>
+</body>   
 </html>
