--- a/Practicas480/PaginasJavaScript/15SumarNumerosEnlazados.html
+++ b/Practicas480/PaginasJavaScript/15SumarNumerosEnlazados.html
@@ -5,20 +5,20 @@
 	<meta charset="utf-8" />
     <script src="../js/JavaScript.js"></script>
 </head>
-<body>
-    <form>
+<body onload="enlazarBotones()">
+    <form id="form1">
         <input type="text" value="0" id="txtsuma" />
         <br />
-        <button type="button" name="botones" value="147" onclick="sumaDeNumeros()">
+        <button type="button" name="botones" value="147" >
             147
         </button>
-        <button type="button" name="botones" value="14" onclick="sumaDeNumeros()">
+        <button type="button" name="botones" value="14" >
             14
         </button>
-        <button type="button" name="botones" value="33" onclick="sumaDeNumeros()">
+        <button type="button" name="botones" value="33" >
             33
         </button>
-        <button type="button" name="botones" value="4" onclick="sumaDeNumeros()">
+        <button type="button" name="botones" value="4" ">
             4
         </button>
         <button type="reset">
