--- a/Practicas480/PaginasJavaScript/CrearTablaMultiplicar.html
+++ b/Practicas480/PaginasJavaScript/CrearTablaMultiplicar.html
@@ -3,8 +3,32 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <script src="../js/JavaScript.js"></script>
 </head>
-<body>
-
-</body>
+<body onload="capturarBotones()">
+    <form id="form1">
+        <button type="button" name="botones" value="1">1</button>
+        <button type="button" name="botones" value="2">2</button>
+        <button type="button" name="botones" value="3">3</button>
+        <button type="button" name="botones" value="4">4</button>
+        <button type="button" name="botones" value="5">5</button>
+        <button type="button" name="botones" value="6">6 </button>
+        <button type="button" name="botones" value="45">45</button>
+        <hr />
+        <ol>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /> </li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+            <li><input type="text" name="cajas" /></li>
+        </ol>
+        <br />
+        <button type="reset">Comenzar de nuevo</button>
+    </form>
+</body> 
 </html>
