--- a/Practicas480/PaginasJavaScript/15SumarNumerosEnlazados.html
+++ b/Practicas480/PaginasJavaScript/15SumarNumerosEnlazados.html
@@ -3,7 +3,42 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
-    <script src="../js/JavaScript.js"></script>
+    <script src="../js/JavaScript.js">
+        function enlazarBotones() {
+            //DEBEMOS ACCEDER AL FORMULARIO   
+            var form = document.getElementById("form1");
+            //BUSCAR EL BOTON O BOTONES Y ASOCIARLOS   
+            //BUSCAMOS LOS BOTONES POR SU NAME A TRAVES DEL FORMULARIO   
+            var botones = form.botones;
+
+            //DEBEMOS RECORRER TODO EL ARRAY DE BOTONES   
+            for (var i = 0; i < botones.length; i++) {
+                //RECUPERAMOS CADA BOTON INDIVIDUAL POR SU INDICE (i)   
+                var boton = botones[i];
+                //ASOCIAMOS SU EVENTO CLICK A LA FUNCION SUMARNUMEROS   
+                boton.addEventListener("click", function () {
+                    //NECESITAMOS RECUPERAR EL BOTON QUE SE HA PULSADO   
+                    // this REPRESENTA EL OBJETO QUE REALIZA LA LLAMADA   
+                    var btn = this;
+                    //DESEAMOS RECUPERAR SU TEXTO O SU VALUE   
+                    var valor = btn.value;
+                    //CONVERTIMOS A NUMERO   
+                    var numero = parseInt(valor);
+                    //COGER LA CAJA   
+                    var caja = document.getElementById("txtsuma");
+                    //RECUPERAMOS EL VALUE DE LA CAJA PARA LA SUMA   
+                    var valuecaja = caja.value;
+                    //GUARDAMOS EL VALUE CON FORMATO ENTERO   
+                    //EN UNA VARIABLE PARA LA SUMA   
+                    var suma = parseInt(valuecaja);
+                    //SUMAMOS EL NUMERO DEL BOTON A LA VARIABLE SUMA   
+                    suma = suma + numero;
+                    //CAMBIAMOS EL VALUE DE LA CAJA CON EL VALOR DE LA SUMA   
+                    caja.value = suma;
+                });
+            }
+        }
+    </script>
 </head>
 <body onload="enlazarBotones()">
     <form id="form1">
